--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "native-base": "^2.13.12",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-android-location-enabler": "^1.2.1",
     "react-native-dotenv": "^0.2.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-slider": "^2.0.3",
