--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/slider": "^2.0.9",
     "@react-navigation/bottom-tabs": "^5.2.8",
     "@react-navigation/drawer": "^5.5.1",
     "@react-navigation/native": "^5.1.7",
@@ -32,7 +33,8 @@
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "rn-range-slider": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
